--- a/app/templates/cashier/cashier_side.html
+++ b/app/templates/cashier/cashier_side.html
@@ -31,13 +31,11 @@
             </svg>
             <span class="sidebar-text">Menus</span>
           </button>
-          <button> 
-            <a href="{% url 'transaction_history_cashier' %}" class="flex items-center p-2 text-gray-900 rounded-lg dark:text-white hover:bg-gray-100 dark:hover:bg-gray-700 group" data-section="history" id="historyLink">
-              <svg class="sidebar-icon w-5 h-5 mr-2" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z"></path>
-              </svg>
-              <span class="sidebar-text">History</span>
-            </a>
+          <button href="#" class="flex items-center p-2 text-gray-700 hover:bg-gray-200 rounded nav-link dark:text-gray-300 dark:hover:bg-gray-700" data-section="history" id="historyLink">
+            <svg class="sidebar-icon w-5 h-5 mr-2" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z"></path>
+            </svg>
+            <span class="sidebar-text">History</span>
           </button>
           <button href="#" class="flex items-center p-2 text-gray-700 hover:bg-gray-200 rounded nav-link dark:text-gray-300 dark:hover:bg-gray-700" data-section="promotion" id="promotionLink">
             <svg class="sidebar-icon w-5 h-5 mr-2" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
@@ -45,15 +43,7 @@
             </svg>
             <span class="sidebar-text">Promotion</span>
           </button>
-          <div class="mt-4 space-y-2">
-            <button class="flex items-center p-2 text-gray-700 hover:bg-gray-200 rounded dark:text-gray-300 dark:hover:bg-gray-700">
-              <svg class="sidebar-icon w-5 h-5 mr-2" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10.325 4.317c.426-1.756 2.924-1.756 3.35 0a1.724 1.724 0 002.573 1.066c1.543-.94 3.31.826 2.37 2.37a1.724 1.724 0 001.065 2.572c1.756.426 1.756 2.924 0 3.35a1.724 1.724 0 00-1.066 2.573c.94 1.543-.826 3.31-2.37 2.37a1.724 1.724 0 00-2.572 1.065c-.426 1.756-2.924 1.756-3.35 0a1.724 1.724 0 00-2.573-1.066c-1.543.94-3.31-.826-2.37-2.37a1.724 1.724 0 00-1.065-2.572c-1.756-.426-1.756-2.924 0-3.35a1.724 1.724 0 001.066-2.573c-.94-1.543.826-3.31 2.37-2.37.996.608 2.296.07 2.572-1.065z"></path>
-                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 12a3 3 0 11-6 0 3 3 0 016 0z"></path>
-              </svg>
-              <span class="sidebar-text">Settings</span>
-            </button>
-          </div>
+
           <button onclick="window.location.href='{% url 'logout' %}'" class="flex items-center p-2 text-gray-700 hover:bg-gray-200 rounded nav-link dark:text-gray-300 dark:hover:bg-gray-700" id="logoutLink">
             <svg class="sidebar-icon w-5 h-5 mr-2" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 16l4-4m0 0l-4-4m4 4H7m6 4v1a3 3 0 01-3 3H6a3 3 0 01-3-3V7a3 3 0 013-3h4a3 3 0 013 3v1"></path>
