--- a/app/templates/manager/layout.html
+++ b/app/templates/manager/layout.html
@@ -80,6 +80,7 @@
       window.MBA_URL = "{% url 'mba_recommendations' %}";
     </script>
     <!-- Link to external script.js -->
+    <script src="{% static 'src/manager_static/script.js' %}" defer></script>
     <script src="{% static 'src/cashier_static/script.js' %}" defer></script>
       <!-- Main Section -->
       <main class="flex-1 p-6 bg-gray-50 dark:bg-gray-900">
